# caip

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  index.html  sitemap.xml
.github/workflows/: bump-version.yml  pages.yml  test.yml
assets/css/: styles.768f82ee.css
assets/js/: 0e384e19.ccb77c8b.js  101dd765.8ca93298.js  17896441.d471671f.js  1ff5e6fd.b6526fd8.js  553c78b7.6d7a7d9f.js  56edc4d5.bc4fb8e8.js  bd50409e.d40365d2.js  c4f5d8e4.f9e47c8b.js  c907353f.effa1036.js  cd3a66f3.7d79369a.js  db32d859.778b5012.js  e46e7510.4cef2688.js  e61f0b4c.0c82909c.js  ecba0d51.d11e1ba5.js  f9c2c370.c2591c5d.js  main.4648996a.js  runtime~main.5a66a410.js
docs/: SECURITY.md  index.html
docs/agent-card-extensions/: index.html
docs/intro/: index.html
docs/schemas/: index.html
docs/sdk/: index.html
examples/: .env.example  Dockerfile  README.md  docker-compose.yml  peer_communication.py  quick_start.py  requirements.txt  run_demo.py
sdk/: V1_MIGRATION.md  pyproject.toml
sdk/caip/: __init__.py  client.py  models.py  server.py
sdk/taco/: __init__.py  _compat.py  agent.py  agent_card.py  cli.py  client.py  models.py  registry.py  schemas.py  server.py  types.py
sdk/taco/monitor/: __init__.py  _event_bus.py  _server.py  _ui.py
sdk/tests/: conftest.py  test_agent.py  test_agent_card.py  test_cli.py  test_client.py  test_models.py  test_registry.py  test_schemas.py  test_server.py
spec/: agent-card-extensions.md  security.md  task-types.md
website/: README.md  docusaurus.config.js  package-lock.json  sidebars.js
(+55 files in other folders)
