[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "taco"
version = "0.1.0"
description = "TACO — The A2A Construction Open-standard SDK"
readme = "../README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
server = ["fastapi>=0.100", "uvicorn>=0.20", "sse-starlette>=2.0"]
client = ["httpx>=0.27"]
test = [
    "pytest>=8.0", "pytest-asyncio>=0.24", "httpx>=0.27",
    "fastapi>=0.100", "uvicorn>=0.20", "sse-starlette>=2.0",
]
all = ["fastapi>=0.100", "uvicorn>=0.20", "httpx>=0.27", "sse-starlette>=2.0"]
dev = [
    "fastapi>=0.100", "uvicorn>=0.20", "sse-starlette>=2.0",
    "httpx>=0.27",
    "pytest>=8.0", "pytest-asyncio>=0.24",
]

[project.urls]
Homepage = "https://github.com/pelles-ai/taco"
Documentation = "https://taco-protocol.dev"
Repository = "https://github.com/pelles-ai/taco"

[tool.pytest.ini_options]
asyncio_mode = "auto"
